<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:layout="@layout/custom_check_preference_layout"
        android:title="@string/conversation_tones"
        android:summary="@string/conversation_tones_summary"/>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category_layout"
        android:title="@string/message_notifications">
        <ListPreference
            android:layout="@layout/custom_list_preference_layout"
            android:title="@string/notification_tone"
            android:key="@string/notification_message"
            android:entries="@array/ringtones"
            android:entryValues="@array/ringtones"/>
        <ListPreference
            android:layout="@layout/custom_list_preference_layout"
            android:title="@string/vibrate"
            android:key="@string/vibrate_message"
            android:entries="@array/vibration"
            android:entryValues="@array/vibration"/>
        <ListPreference
            android:layout="@layout/custom_list_preference_layout"
            android:title="@string/popup"
            android:key="@string/popup_message"
            android:entries="@array/pop_notification"
            android:entryValues="@array/pop_notification"/>
        <ListPreference
            android:layout="@layout/custom_list_preference_layout"
            android:title="@string/light"
            android:key="@string/light_message"
            android:entries="@array/light"
            android:entryValues="@array/light"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category_layout"
        android:title="@string/group_notifications">
        <ListPreference
            android:layout="@layout/custom_list_preference_layout"
            android:title="@string/notification_tone"
            android:key="@string/notification_group"
            android:entries="@array/ringtones"
            android:entryValues="@array/ringtones"/>
        <ListPreference
            android:layout="@layout/custom_list_preference_layout"
            android:title="@string/vibrate"
            android:key="@string/vibrate_group"
            android:entries="@array/vibration"
            android:entryValues="@array/vibration"/>
        <ListPreference
            android:layout="@layout/custom_list_preference_layout"
            android:title="@string/popup"
            android:key="@string/popup_group"
            android:entries="@array/pop_notification"
            android:entryValues="@array/pop_notification"/>
        <ListPreference
            android:layout="@layout/custom_list_preference_layout"
            android:title="@string/light"
            android:key="@string/light_group"
            android:entries="@array/light"
            android:entryValues="@array/light"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category_layout"
        android:title="@string/call_notification">
        <ListPreference
            android:layout="@layout/custom_list_preference_layout"
            android:title="@string/notification_tone"
            android:key="@string/notification_call"
            android:entries="@array/ringtones"
            android:entryValues="@array/ringtones"/>
        <ListPreference
            android:layout="@layout/custom_list_preference_layout"
            android:title="@string/vibrate"
            android:key="@string/vibrate_call"
            android:entries="@array/vibration"
            android:entryValues="@array/vibration"/>
    </PreferenceCategory>
</PreferenceScreen>