<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_warning"
        android:textColor="@android:color/black" />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/delete_media"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:id="@+id/mClearAllMessages"
        android:text="@string/clear_all_messages"
        android:textColor="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:id="@+id/mCancel"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:id="@+id/clearAllExceptStarred"
        android:text="@string/clear_all_except_starred"
        android:textColor="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Borderless"/>
</LinearLayout>