<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.chats.history.ChatHistoryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mEmailChat"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/email_chat"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSeparator"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mArchiveAllChats"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/archive_all_chats"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSeparator"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mClearAllChats"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/clear_all_chats"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSeparator"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mDeleteAllChats"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/delete_all_chats"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSeparator"/>
</LinearLayout>