<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.account.AccountActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mPrivacySettings"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/privacy"
        android:clickable="true"
        android:focusable="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/mPrivacySettings"
        android:background="@color/colorSeparator"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mSecuritySettings"
        android:layout_below="@+id/mPrivacySettings"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/security"
        android:clickable="true"
        android:focusable="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/mSecuritySettings"
        android:background="@color/colorSeparator"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mTwoStepVerificationSettings"
        android:layout_below="@+id/mSecuritySettings"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/two_step_verification"
        android:clickable="true"
        android:focusable="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/mTwoStepVerificationSettings"
        android:background="@color/colorSeparator"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mChangeNumberSettings"
        android:layout_below="@+id/mTwoStepVerificationSettings"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/change_number"
        android:clickable="true"
        android:focusable="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/mChangeNumberSettings"
        android:background="@color/colorSeparator"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/mDeleteMyAccountSettings"
        android:layout_below="@+id/mChangeNumberSettings"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/delete_my_account"
        android:clickable="true"
        android:focusable="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/mDeleteMyAccountSettings"
        android:background="@color/colorSeparator"/>
</RelativeLayout>